--- a/doc/Template-1.tex
+++ b/doc/Template-1.tex
@@ -140,13 +140,13 @@ Proof Sketch:~~}}
   {\qed\end{trivlist}}
 
 
-\title{\bf Modeling Alternative Affordable Housing Priority Systems }
+\title{\bf CPSC 464: Modeling Alternative Affordable Housing Priority Systems}
 
 
-\author{ Andrew West, Nicole Lam, Atul Pokharel, Urszula Solarz  \\ \\ 
-Course: CPSC 464 \\ 
+\author{Andrew West, Nicole Lam, Atul Pokharel, Urszula Solarz \\
 Professor: Nisheeth K. Vishnoi
 }
+
 
 
 
@@ -156,85 +156,97 @@ Professor: Nisheeth K. Vishnoi
 
 \maketitle
  
-%\begin{abstract}
-%
-%Write a 6-8 line abstract clearly stating the high level goals and the concrete desired goals of this project. 
-%  
-%\end{abstract}
-%
-%
-%\newpage
-%
-%
-%
-%%\tableofcontents
-%
-%\newpage
+\begin{abstract}
 
-%\section{Proposal}
+Write a 6-8 line abstract clearly stating the high level goals and the concrete desired goals of this project. 
+  
+\end{abstract}
 
-%\paragraph{High level description of the problem.}
 
-%We propose to empirically examine how biases in housing allocation compound in queues that permit choice. More generally, we propose to study the fairness properties of housing allocation schemes that do and do not permit choice on the part of recipients.
+\newpage
 
- 
-%\paragraph{Motivation to study the problem and its importance.}
-%Housing is a basic necessity that is in increasingly scarce supply in American cities. Although the specific algorithms used to allocate affordable housing are not available, there appear to be two types based on whether or not the applicant is given any choice in the allocation. For example, after they are selected for housing by a lottery system, they may be presented with one or more options to choose from. 
-%Better understanding how the presence of this choice can mitigate or exacerbate biases could help public housing authorities assess the fairness of allocation schemes currently in use, as well as enable citizens to hold governments responsible for fair allocations of a scarce, basic resource.  \\
-%\newline
-%In general, there are two main modes of allocating housing to those who want it. One is the market mechanism in which those who can pay market price of housing receive it. A second one is through public housing agencies or similar non-market modes in which the cost of housing is significantly subsidized below market price. When there are fewer housing units than the number of those who want it and price cannot be used to allocate, who receives housing depends on an allocation algorithm. Some common algorithms for allocating housing in this latter scenario are lotteries and waitlists, with or without some other group-based preference ranking applied to it.   \\
-%\newline
-%There are two variations of non-market allocation algorithms depending on how much choice the recipient has. In the first, the recipient is presented with a choice of one or more units. They can either choose from among the set or choose to go back into the waitlist or lottery. While the fairness properties of different allocation schemes have been examined, to our knowledge, the fairness properties of allowing individuals to choose whether to accept or not is relatively understudied particularly in the presence of bias. 
 
+
+\tableofcontents
+
+\newpage
+
+\section{Introduction}
+
+\paragraph{High level description of the problem.}
+
+\paragraph{Motivation to study the problem.}
 
 \paragraph{Most related prior works.}
+Explain in detail the most related (around 3) prior works. For each, 
 
-%\item Novelty in proofs (leave blank if not done yet or not applicable)
+\begin{enumerate}
+\item  mention how they address the high level problem mentioned above,
+
+\item in what ways do they succeed and what are their positives, and
+
+\item in what ways are they insufficient.
+
+\end{enumerate}
 
 
-\paragraph{Feasibility and potential risks.} \\
+\paragraph{Desired contributions.}
+Write down a bullet list of desired contributions that emphasize:
+
+\begin{itemize} 
+
+\item Conceptual novelty (e.g. first attempt to study the problem, new model, etc.)
+
+\item Technical novelty (e.g. a new theorem)
+
+\item Novelty in proofs (leave blank if not done yet or not applicable)
+
+\item Empirical evaluations: 1) on simulated datasets, 2) real-world datasets.
+
+\end{itemize}
+
+\paragraph{Feasibility and potential risks.}
+
+
+\section{Other related works}
+
+\section{Preliminaries / Problem statement} 
+This should contain all the required mathematical notation and background necessary for anything to come after.
+
+\section{The model/framework}
 
 
 
-%\section{Other related works}
-%
-%\section{Preliminaries / Problem statement} 
-%This should contain all the required mathematical notation and background necessary for anything to come after.
-%
-%\section{The model/framework}
-%
-%
-%
-%
-%
-%
-%\section{(Desired) Theoretical results}
-%
-%
-%\subsection{Preliminary results}
-%
-%
-%\section{(Desired) Empirical results}
-%
-%\subsection{Setup}
-%\paragraph{Datasets.}
-%
-%\paragraph{Algorithms.}
-%
-%\paragraph{Baselines and metrics.}
-%
-%
-%
-%\subsection{Preliminary results}
-%
-%
-%\section{Conclusion, limitations, and future Work}
-%Discuss the importance of the results, state the limitations, and point out avenues of future work/open problems.
-%
+
+
+
+\section{(Desired) Theoretical results}
+
+
+\subsection{Preliminary results}
+
+
+\section{(Desired) Empirical results}
+
+\subsection{Setup}
+\paragraph{Datasets.}
+
+\paragraph{Algorithms.}
+
+\paragraph{Baselines and metrics.}
+
+
+
+\subsection{Preliminary results}
+
+
+\section{Conclusion, limitations, and future Work}
+Discuss the importance of the results, state the limitations, and point out avenues of future work/open problems.
+
 
 
 \bibliographystyle{plain}
-\bibliography{references} 
+\bibliography{} 
 
 
 \end{document}
